Restructure du code